chat/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: chat
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: 8M
    nginx.org/websocket-services: prosody-websocket
spec:
  tls:
    - secretName: chat-deuill-org-certificate
      hosts:
        - chat.deuill.org
  rules:
    - host: chat.deuill.org
      http:
        paths:
          - path: /
            backend:
              serviceName: prosody-http
              servicePort: 5280
          - path: /xmpp-websocket
            backend:
              serviceName: prosody-http
              servicePort: 5280
